--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "husky": "^1.0.0-rc.13",
     "lint-staged": "^7.2.0",
-    "prettier": "1.13.7"
+    "prettier": "1.13.7",
+    "rimraf": "^2.6.2",
+    "typescript": "^2.9.2"
   },
   "husky": {
     "hooks": {
@@ -18,9 +20,15 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
+    "*.{ts,js,json,css,md}": [
       "prettier --write",
       "git add"
     ]
+  },
+  "scripts": {
+    "precommit": "lint-staged",
+    "clean": "rimraf build",
+    "build": "npm run clean && tsc",
+    "watch": "tsc -w"
   }
 }
