--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "restls",
   "version": "1.0.0",
   "description": "A REST-like interface for localStorage",
-  "main": "index.js",
+  "main": "build/index.js",
   "repository": "https://github.com/danrashid/restls",
   "author": "Dan Rashid",
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/uuid": "^3.4.3",
     "husky": "^1.0.0-rc.13",
     "lint-staged": "^7.2.0",
     "prettier": "1.13.7",
@@ -30,5 +31,8 @@
     "clean": "rimraf build",
     "build": "npm run clean && tsc",
     "watch": "tsc -w"
+  },
+  "dependencies": {
+    "uuid": "^3.3.2"
   }
 }
