--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/jest": "^23.3.0",
     "@types/uuid": "^3.4.3",
     "husky": "^1.0.0-rc.13",
+    "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
+    "npm-run-all": "^4.1.3",
     "prettier": "1.13.7",
     "rimraf": "^2.6.2",
+    "ts-jest": "^23.0.1",
     "typescript": "^2.9.2"
   },
   "husky": {
@@ -26,11 +30,31 @@
       "git add"
     ]
   },
+  "jest": {
+    "setupFiles": [
+      "./test/setup.ts"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
   "scripts": {
     "precommit": "lint-staged",
     "clean": "rimraf build",
     "build": "npm run clean && tsc",
-    "watch": "tsc -w"
+    "test": "jest",
+    "watch:ts": "tsc -w",
+    "watch:jest": "jest --watch",
+    "watch": "npm-run-all -p watch:*"
   },
   "dependencies": {
     "uuid": "^3.3.2"
