--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "noImplicitAny": true,
     "lib": ["es6", "dom"]
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["src/**/*.test.ts*"]
 }
