--- a/package.json
+++ b/package.json
@@ -45,6 +45,17 @@
       "jsx",
       "json",
       "node"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    },
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}"
     ]
   },
   "scripts": {
