--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "husky": "^1.0.0-rc.13",
     "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
-    "npm-run-all": "^4.1.3",
     "prettier": "1.13.7",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.0.1",
@@ -63,9 +62,7 @@
     "clean": "rimraf build",
     "build": "npm run clean && tsc",
     "test": "jest",
-    "watch:ts": "tsc -w",
-    "watch:jest": "jest --watch",
-    "watch": "npm-run-all -p watch:*"
+    "watch": "tsc -w"
   },
   "dependencies": {
     "uuid": "^3.3.2"
