--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.0",
     "@types/uuid": "^3.4.3",
+    "coveralls": "^3.0.2",
     "husky": "^1.0.0-rc.13",
     "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
