--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prettier": "1.13.7",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.0.1",
-    "typescript": "^2.9.2"
+    "typescript": "2.7.2"
   },
   "husky": {
     "hooks": {
