--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "./build",
     "target": "es5",
     "noImplicitAny": true,
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom"],
+    "declaration": true
   },
   "include": ["./src/**/*"],
   "exclude": ["src/**/*.test.ts*"]
