--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "module": "commonjs",
     "outDir": "./build",
     "target": "es5",
     "noImplicitAny": true,
     "lib": ["es6", "dom"],
+    "sourceMap": true,
+    "moduleResolution": "node",
     "declaration": true
   },
   "include": ["./src/**/*"],
