--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "./build",
+    "outDir": "./build/dist",
     "target": "es5",
     "noImplicitAny": true,
     "lib": ["es6", "dom"],
