--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 cache: yarn
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.7.0
-  - export PATH="$HOME/.yarn/bin:$PATH"jobs:
+  - export PATH="$HOME/.yarn/bin:$PATH"
 include:
   - stage: Produce Coverage
     node_js: node
