--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ include:
     node_js: node
     script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
       && rm -rf ./coverage
+script: yarn build
 deploy:
   provider: npm
   email: npm@danrashid.com
